[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyarcam"
version = "0.1.0"
description = "Python client for Arcam SA10/SA20 integrated amplifier IP control (RS232/NET protocol)"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["arcam", "sa10", "sa20", "amplifier", "home-automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Home Automation",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyarcam*"]

[tool.setuptools.package-data]
pyarcam = ["py.typed"]
